<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androiddsd.BusquedaRemesaActivity" >

    <EditText
        android:id="@+id/eteNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numeroRemesa"
        android:textAlignment="center"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:id="@+id/layRemesa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numero"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tviNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:textSize="12sp" />
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tviFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:textSize="12sp" />
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agencia"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tviAgencia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:textSize="12sp" />
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moneda"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tviMoneda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:textSize="12sp" />
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monto"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tviMonto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:textSize="12sp" />
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/estado"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tviEstado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="end"
                android:textSize="12sp" />
        </TableRow>
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

</LinearLayout>